# TraduzApp

./: .gitignore  README.md  main.kv  main.py  pyproject.toml
