[tool.poetry]
name = "traduapp"
version = "0.1.0"
description = ""
authors = ["Oseiasdfarias <oseias.dfarias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.1.0"
googletrans = "4.0.0-rc1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
